[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene_a.gd" type="Script" id=1]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Roboto-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="MeshTexture" id=1]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="SceneA" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -64, 171 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
script = ExtResource( 1 )

[node name="ItemList" type="ItemList" parent="."]
margin_left = 66.0
margin_top = 103.0
margin_right = 923.0
margin_bottom = 975.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_fonts/font = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_left = 64.0
margin_top = 48.0
margin_right = 260.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 2 )
text = "Welcome to Mod Loader 0.05v"

[node name="GoToScene" type="Button" parent="."]
margin_left = 361.0
margin_top = 42.0
margin_right = 489.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 87, 16 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Run Game"
icon = SubResource( 1 )

[node name="RunInfo" type="Label" parent="."]
margin_left = 644.0
margin_top = 39.0
margin_right = 923.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 4 )
text = "To load mod double click it on file list and press \"Run Game\""
autowrap = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 966.0
margin_top = 82.0
margin_right = 1813.0
margin_bottom = 841.0
size_flags_horizontal = 3
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
margin_left = 951.0
margin_top = 127.0
margin_right = 1415.0
margin_bottom = 679.0
popup_exclusive = true
window_title = "Otw√≥rz plik"
mode = 0
filters = PoolStringArray( "*.tscn" )

[node name="Button" type="Button" parent="."]
margin_left = 945.0
margin_top = 59.0
margin_right = 1154.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 2 )
text = "Choose main scene"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 1171.0
margin_top = 65.0
margin_right = 1848.0
margin_bottom = 89.0
hint_tooltip = "Press Enter to apply"

[node name="info" type="Label" parent="."]
margin_left = 1176.0
margin_top = 40.0
margin_right = 1783.0
margin_bottom = 54.0
text = "Selecting files from sub folders is not working, you need to type them manualy and press enter."

[connection signal="item_activated" from="ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="GoToScene" to="." method="_on_goto_scene_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
